[gd_scene load_steps=13 format=3 uid="uid://d4j1lr40n0p6i"]

[ext_resource type="Script" path="res://main.gd" id="1_3b5r7"]
[ext_resource type="Script" path="res://DashObj.gd" id="2_arewi"]
[ext_resource type="PackedScene" uid="uid://dbeuqwwpf8t5v" path="res://drop.tscn" id="2_yxco7"]
[ext_resource type="Texture2D" uid="uid://bdsb0uricy6cd" path="res://Assets/Background.png" id="3_6fk3f"]
[ext_resource type="Texture2D" uid="uid://kw0ycmk8u4ca" path="res://Assets/dash.png" id="5_gfhf6"]
[ext_resource type="AudioStream" uid="uid://diu1u15127cs8" path="res://Assets/Audio/catch.wav" id="6_y63nw"]
[ext_resource type="AudioStream" uid="uid://bujhov3eu2pkv" path="res://Assets/Audio/miss.wav" id="7_wx2gv"]
[ext_resource type="AudioStream" uid="uid://ds6thstkxovfv" path="res://Assets/Audio/gameover.wav" id="8_pn77x"]

[sub_resource type="SystemFont" id="SystemFont_fx3i3"]

[sub_resource type="SystemFont" id="SystemFont_4mrvx"]
font_weight = 600
font_stretch = 150

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wjd1i"]
size = Vector2(258, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_var7k"]
size = Vector2(1226, 20)

[node name="Main" type="Node2D"]
position = Vector2(580, 326)
script = ExtResource("1_3b5r7")
Drop = ExtResource("2_yxco7")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_left = 60.0
offset_top = 40.0
offset_right = 310.0
offset_bottom = 88.0
theme_override_colors/font_shadow_color = Color(0.235294, 0.239216, 0.258824, 1)
theme_override_fonts/font = SubResource("SystemFont_fx3i3")
theme_override_font_sizes/font_size = 24
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lives" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -302.0
offset_top = 40.0
offset_right = -52.0
offset_bottom = 88.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.235294, 0.239216, 0.258824, 1)
theme_override_fonts/font = SubResource("SystemFont_4mrvx")
theme_override_font_sizes/font_size = 24
text = "Lives:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="UI"]
offset_left = 327.0
offset_top = 192.0
offset_right = 827.0
offset_bottom = 272.0
theme_override_colors/font_color = Color(0.952941, 0.952941, 0.952941, 1)
theme_override_colors/font_shadow_color = Color(0.235294, 0.239216, 0.258824, 1)
theme_override_fonts/font = SubResource("SystemFont_4mrvx")
theme_override_font_sizes/font_size = 56
text = "Game Over!"
horizontal_alignment = 1

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2.44301, 2.44301)
texture = ExtResource("3_6fk3f")
metadata/_edit_lock_ = true

[node name="DashObj" type="Area2D" parent="."]
position = Vector2(0, 8)
script = ExtResource("2_arewi")
metadata/_edit_group_ = true

[node name="Dash" type="Sprite2D" parent="DashObj"]
position = Vector2(0, 284)
scale = Vector2(0.605, 0.605)
texture = ExtResource("5_gfhf6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashObj"]
position = Vector2(2, 284)
shape = SubResource("RectangleShape2D_wjd1i")

[node name="Catcher" type="Area2D" parent="."]
position = Vector2(-1, 333)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Catcher"]
shape = SubResource("RectangleShape2D_var7k")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Catch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_y63nw")

[node name="Miss" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_wx2gv")

[node name="GameOver" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_pn77x")

[connection signal="body_shape_entered" from="DashObj" to="." method="_on_dash_obj_body_shape_entered"]
[connection signal="body_shape_entered" from="Catcher" to="." method="_on_catcher_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
